# my-agent

./: .env.example  .gitignore  DEPENDENCIES.md  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  test.txt  test1.py  test2.html
aiops-docs-noise/: business_kpi_monthly.md  cache_tuning_playbook.md  k8s_ingress_tls_guide.md  log_format_standard.md  mock_incident_drill_script.md  monitoring_glossary_noise.md  mysql_backup_restore.md  perf_capacity_planning_false_friend.md  release_note_v3_2.md  security_waf_playbook.md
app/: __init__.py  main.py
docs/: DEVOPS_KNOWLEDGE.md  PHASE3_PLAN.md  TOOL_EXPLANATION.md  design.md  requirements.md  tasks.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
interview/: jd.md  prompt.md  面试记录.md  面试输出.md  项目简历.md
static/: app.js  index.html  styles.css
tests/: test2.py  test_aiops_agent.py  test_aiops_agent_tool_runtime.py  test_aiops_api.py  test_aiops_debug.py  test_aiops_quick.py  test_aiops_service_docs_tooling.py  test_aiops_simple.py  test_aiops_tools.py  test_chat_agent_tool_runtime.py  test_chat_service_agent_tooling.py  test_chat_service_summary.py  test_docs_tool.py  test_internal_docs_tool.py  test_metadata_filter_edge_cases.py  test_metadata_filters.py  test_query_rewriter.py  test_query_rewriter_history_window.py  test_query_rewriter_summary.py  test_rag_regression.py  test_rag_service_history.py  test_routes_chat_metadata.py  test_session_store_summary.py  test_tool_flow.py  test_tool_runtime.py  (+1 more)
(+73 files in other folders)
